[gd_scene load_steps=69 format=2]

[ext_resource path="res://Scripts/Fighter.gd" type="Script" id=1]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Fall.png" type="Texture" id=2]
[ext_resource path="res://Images/Martial Hero/Sprites/Run.png" type="Texture" id=3]
[ext_resource path="res://Images/Martial Hero/Sprites/Fall.png" type="Texture" id=4]
[ext_resource path="res://Images/Martial Hero/Sprites/Jump.png" type="Texture" id=5]
[ext_resource path="res://Images/Martial Hero/Sprites/Idle.png" type="Texture" id=6]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Jump.png" type="Texture" id=7]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Idle.png" type="Texture" id=8]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Run.png" type="Texture" id=9]
[ext_resource path="res://Images/Martial Hero/Sprites/Attack2.png" type="Texture" id=10]
[ext_resource path="res://Images/Martial Hero/Sprites/Attack1.png" type="Texture" id=11]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Attack1.png" type="Texture" id=12]
[ext_resource path="res://Images/Martial Hero 2/Sprites/Attack2.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Right",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Shoot",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 19.1824, 28.2105 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Right",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "Shoot",
"speed": 20.0
} ]

[node name="Fighter" type="KinematicBody2D"]
scale = Vector2( 2.36129, 2.36129 )
collision_mask = 0
script = ExtResource( 1 )
gravity = 100.0
speed = 500.0
jumppower = 2000.0

[node name="player2" type="AnimatedSprite" parent="."]
frames = SubResource( 29 )
animation = "Attack"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 30 )

[node name="player1" type="AnimatedSprite" parent="."]
frames = SubResource( 55 )
animation = "Attack"
frame = 2

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="player2" to="." method="_on_player2_animation_finished"]
[connection signal="animation_finished" from="player1" to="." method="_on_player1_animation_finished"]
